# dapctl

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  dap-profile.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DAP_PROFILE_SPEC.md  FILESYSTEM_NOTES.md  MTP_WORKFLOW.md  NETWORK.md
examples/: hiby-r4-test.toml  sync-fiio-m21-flac.toml
packaging/aur/: PKGBUILD
packaging/scoop/: dapctl.json
profiles/: ak-sr35.toml  fiio-m11.toml  fiio-m21.toml  generic.toml  hiby-r6.toml  ibasso-dx320.toml  shanling-m3ultra.toml
src/: error.rs  lib.rs  main.rs
src/audit/: mod.rs  report.rs
src/cli/: audit.rs  cover.rs  diff.rs  export.rs  log.rs  mod.rs  profile.rs  scan.rs  sync.rs
src/config/: mod.rs  schema.rs
src/cover/: itunes.rs  mod.rs  musicbrainz.rs
src/dap/: builtin.rs  mod.rs  schema.rs
src/diff/: compare.rs  mod.rs  plan.rs  walker.rs
src/export/: m3u.rs
src/logging/: mod.rs
src/player/: art.rs  decoder.rs  engine.rs  history.rs  library.rs  lyrics.rs  mod.rs  queue.rs  scanner.rs
src/scan/: heuristic.rs  mod.rs  removable.rs
src/ssh/: mod.rs
src/transcode/: cache.rs  engine.rs  ffmpeg.rs  mod.rs
src/transfer/: executor.rs  manifest.rs  mod.rs  verify.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/views/: diff.rs  home.rs  (+7 more)
tests/: diff_basic.rs  snapshots.rs
tests/snapshots/: snapshots__builtin_profile_ids_snapshot.snap  snapshots__plan_json_all_entry_kinds.snap  snapshots__plan_json_with_warnings.snap  (+2 more)
