[package]
name        = "dapctl"
version     = "0.0.1"
edition     = "2021"
rust-version = "1.75"
description = "TUI/CLI sync tool for HiFi Digital Audio Players"
license     = "GPL-3.0-or-later"
repository  = "https://github.com/marturojt/dapctl"
readme      = "README.md"
keywords    = ["audio", "sync", "tui", "dap", "music"]
categories  = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "dapctl"
path = "src/main.rs"

[dependencies]
anyhow              = "1"
thiserror           = "1"
clap                = { version = "4", features = ["derive", "wrap_help"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
toml_edit           = "0.22"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
ratatui             = "0.29"
crossterm           = "0.28"
walkdir             = "2"
rayon               = "1"
blake3              = "1"
indicatif           = "0.17"
camino              = { version = "1", features = ["serde1"] }
directories         = "5"
globset             = "0.4"
ulid                = { version = "1", features = ["serde"] }
time                = { version = "0.3", features = ["serde", "formatting", "macros"] }
sysinfo             = "0.32"

[dev-dependencies]
tempfile  = "3"
assert_fs = "1"
insta     = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
